com.aimluck.eip.msgboard.MsgboardTopicReplyFormData.selectMsgMember(RunData, Context) は、効率が悪い new Integer(int) コンストラクタを呼び出しています。その代わりに Integer.valueOf(int) を使用してください。 の修正
git-svn-id: http://aipo.googlecode.com/svn/trunk@4117 b7d4e767-949e-c8c6-5735-6c11b8a2f74f